[tool.poetry]
name = "jira-reports"
version = "0.1.0"
description = "Collection of reports built from Jira"
authors = ["Sebastien Georget <sebastien.georget@canonical.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
pytz = "^2025.1"
requests = "^2.32.3"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
